# water_carrier

./: .gitignore  README.md
esp32/gamepad_toy/: README.md  gamepad_toy.ino
esp32/libraries/WaterCarrier/: dc_motor.cpp  dc_motor.h
esp32/water_carrier/: water_carrier.ino
models/: README.md  water_carrier-Body.3mf  water_carrier-Body.stl  water_carrier-Chassis.3mf  water_carrier-Chassis.stl  water_carrier-LegConnector.3mf  water_carrier-LegConnector.stl  water_carrier-LegConnectorAxis.stl  water_carrier-Wheel.3mf  water_carrier-Wheel.stl
ros/trail_control/: LICENSE  package.xml  setup.cfg  setup.py
ros/trail_control/trail_control/: trail_control.py
